Revert accidentally pushed "Fix most IE scrollbar issues"
This reverts commit ddad359eab5c72ad2afc5778cc84d1f09ee5b530.

--- a/WebContent/VAADIN/themes/base/widget/widget.scss
+++ b/WebContent/VAADIN/themes/base/widget/widget.scss
@@ -7,10 +7,7 @@
 	text-align: left;
 	display: inline-block;
 	white-space: normal;
-	
-	/* Workaround for scrollbar issues in IE8+ */
-	vertical-align: bottom;
-	font-size: 12px;
+	vertical-align: top;
 }
 
 }
